--- a/fonoa-argocd-yolo.css
+++ b/fonoa-argocd-yolo.css
@@ -1,7 +1,11 @@
-.nav-bar {
-    background: linear-gradient(to bottom, hsl(0deg 0% 0%), hsl(11deg 100% 62%));
+.sidebar {
+    background-color: #561317;
 }
 
-.nav-bar__logo img {
+.filter__item {
+    background-color: #561317;
+}
+
+.sidebar__logo img {
     content: url(https://i.imgur.com/9ylmH1p.png);
 }
